--- a/templates/users/sign_up.html
+++ b/templates/users/sign_up.html
@@ -4,40 +4,45 @@
         "Academic Administration", "Original Content Author", "Publisher / Product Owner", 
         "Service Provider", "Classroom Instructor", "Other"];
 %>
-<form class="form-horizontal" action="/user/create" method="post">
+<form class="form-horizontal" action="/user/create" method="post" id="signUp">
   <div class="form-group">
-    <label for="firstName" class="col-sm-2 control-label">First Name</label>
-    <div class="col-sm-10">
+    <label for="firstName" class="col-sm-3 control-label">First Name</label>
+    <div class="col-sm-9">
       <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name">
+      <span class="help-block hidden"></span>
     </div>
   </div>
   <div class="form-group">
-    <label for="lastName" class="col-sm-2 control-label">Last Name</label>
-    <div class="col-sm-10">
+    <label for="lastName" class="col-sm-3 control-label">Last Name</label>
+    <div class="col-sm-9">
       <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name">
+      <span class="help-block hidden"></span>
     </div>
   </div>
   <div class="form-group">
-    <label for="username" class="col-sm-2 control-label">Email</label>
-    <div class="col-sm-10">
+    <label for="username" class="col-sm-3 control-label">Email</label>
+    <div class="col-sm-9">
       <input type="email" class="form-control" id="username" name="username" placeholder="Email">
+      <span class="help-block hidden"></span>
     </div>
   </div>
   <div class="form-group">
-    <label for="confirmEmail" class="col-sm-2 control-label">Confirm Email</label>
-    <div class="col-sm-10">
+    <label for="confirmEmail" class="col-sm-3 control-label">Confirm Email</label>
+    <div class="col-sm-9">
       <input type="email" class="form-control" id="confirmEmail" name="confirmEmail" placeholder="Confirm Email">
+      <span class="help-block hidden"></span>
     </div>
   </div>
   <div class="form-group">
-    <label for="password" class="col-sm-2 control-label">Password</label>
-    <div class="col-sm-10">
+    <label for="password" class="col-sm-3 control-label">Password</label>
+    <div class="col-sm-9">
       <input type="password" class="form-control" id="password" name="password">
+      <span class="help-block hidden"></span>
     </div>
   </div>
   <div class="form-group">
-    <label for="organization" class="col-sm-2 control-label">Organization Name</label>
-    <div class="col-sm-10">
+    <label for="organization" class="col-sm-3 control-label">Organization Name</label>
+    <div class="col-sm-9">
       <input type="text" class="form-control" id="organization" name="organization" placeholder="Organization">
     </div>
   </div>
@@ -54,16 +59,17 @@
     </fieldset>
   </div>
   <div class="form-group">
-    <div class="col-sm-9"></div>
-    <div class="col-sm-3">
+    <div class="col-sm-8"></div>
+    <div class="col-sm-4">
       <label class="checkbox-inline">
-      <input type="checkbox" name="agree" value="true">I agree to the terms of service
+      <input type="checkbox" name="termsOfService" id="termsOfService" value="true">I agree to the terms of service
       </label>
+      <span class="help-block hidden"></span>
     </div>
   </div>
   <div class="form-group">
-    <div class="col-sm-9"></div>
-    <div class="col-sm-3">
+    <div class="col-sm-8"></div>
+    <div class="col-sm-4">
       <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
     </div>
   </div>
