MMLC-116 add confirm password to the template

--- a/templates/users/sign_up.html
+++ b/templates/users/sign_up.html
@@ -41,6 +41,13 @@
     </div>
   </div>
   <div class="form-group">
+    <label for="confirmPassword" class="col-sm-3 control-label">Confirm Password</label>
+    <div class="col-sm-9">
+      <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
+      <span class="help-block hidden"></span>
+    </div>
+  </div>
+  <div class="form-group">
     <label for="organization" class="col-sm-3 control-label">Organization Name</label>
     <div class="col-sm-9">
       <input type="text" class="form-control" id="organization" name="organization" placeholder="Organization">
