MMLC-16 Indicate required fields

--- a/templates/users/sign_up.html
+++ b/templates/users/sign_up.html
@@ -6,42 +6,42 @@
 %>
 <form class="form-horizontal" action="/user/create" method="post" id="signUp">
   <div class="form-group">
-    <label for="firstName" class="col-sm-3 control-label">First Name</label>
+    <label for="firstName" class="col-sm-3 control-label">First Name* <span class="sr-only">Required</span></label>
     <div class="col-sm-9">
       <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name">
       <span class="help-block hidden"></span>
     </div>
   </div>
   <div class="form-group">
-    <label for="lastName" class="col-sm-3 control-label">Last Name</label>
+    <label for="lastName" class="col-sm-3 control-label">Last Name* <span class="sr-only">Required</span></label>
     <div class="col-sm-9">
       <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name">
       <span class="help-block hidden"></span>
     </div>
   </div>
   <div class="form-group">
-    <label for="username" class="col-sm-3 control-label">Email</label>
+    <label for="username" class="col-sm-3 control-label">Email* <span class="sr-only">Required</span></label>
     <div class="col-sm-9">
       <input type="email" class="form-control" id="username" name="username" placeholder="Email">
       <span class="help-block hidden"></span>
     </div>
   </div>
   <div class="form-group">
-    <label for="confirmEmail" class="col-sm-3 control-label">Confirm Email</label>
+    <label for="confirmEmail" class="col-sm-3 control-label">Confirm Email* <span class="sr-only">Required</span></label>
     <div class="col-sm-9">
       <input type="email" class="form-control" id="confirmEmail" name="confirmEmail" placeholder="Confirm Email">
       <span class="help-block hidden"></span>
     </div>
   </div>
   <div class="form-group">
-    <label for="password" class="col-sm-3 control-label">Password</label>
+    <label for="password" class="col-sm-3 control-label">Password* <span class="sr-only">Required</span></label>
     <div class="col-sm-9">
       <input type="password" class="form-control" id="password" name="password">
       <span class="help-block hidden"></span>
     </div>
   </div>
   <div class="form-group">
-    <label for="confirmPassword" class="col-sm-3 control-label">Confirm Password</label>
+    <label for="confirmPassword" class="col-sm-3 control-label">Confirm Password* <span class="sr-only">Required</span></label>
     <div class="col-sm-9">
       <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
       <span class="help-block hidden"></span>
