--- a/templates/user_nav.html
+++ b/templates/user_nav.html
@@ -1,4 +1,5 @@
 <ul class="nav navbar-nav navbar-right">
+    <li class="public"><a href="#/">Conversion Form</a></li>   
     <li class="user-tabs"><a href="#/equations">My Equations</a></li>
     <% if (user.get("role") == "admin") { %>
         <li class="user-tabs"><a href="admin">Admin</a></li>
