--- a/templates/public_nav.html
+++ b/templates/public_nav.html
@@ -1,3 +1,7 @@
+<ul class="nav navbar-nav navbar-right">
+    <li class="public"><a href="#/">Conversion Form</a></li>   
+    <li class="public"><a href="/user/signUp" id="registerLink">Register</a></li>   
+</ul>
 <form class="navbar-form navbar-right public login" action="/auth/process" method="post">
     <div class="form-group">
         <label for="username" class="sr-only">Username</label>
@@ -9,6 +13,4 @@
     </div>
     <button type="submit" class="btn btn-primary">Sign in</button>
 </form>
-<ul class="nav navbar-nav navbar-right">
-    <li class="public"><a href="/user/signUp" id="registerLink">Register</a></li>   
-</ul>
+
