--- a/templates/public_nav.html
+++ b/templates/public_nav.html
@@ -1,5 +1,5 @@
 <ul class="nav navbar-nav navbar-right">
-    <li class="public"><a href="#/">Conversion Form</a></li>   
+    <li class="public"><a href="#/" class="pageLink">Conversion Form</a></li>   
     <li class="public"><a href="/user/signUp" id="registerLink">Register</a></li>   
 </ul>
 <form class="navbar-form navbar-right public login" action="/auth/process" method="post">
