--- a/templates/user_nav.html
+++ b/templates/user_nav.html
@@ -1,6 +1,7 @@
 <ul class="nav navbar-nav navbar-right">
-    <li class="public"><a href="#/">Conversion Form</a></li>   
-    <li class="user-tabs"><a href="#/equations">My Equations</a></li>
+    <li class="public"><a href="#/" class="pageLink">Conversion Form</a></li>   
+    <li class="user-tabs"><a href="#/equations" class="pageLink">My Equations</a></li>
+    <li class="user-tabs"><a href="#/uploads" class="pageLink">My Uploads</a></li>
     <% if (user.get("role") == "admin") { %>
         <li class="user-tabs"><a href="admin">Admin</a></li>
     <% } %>
