Bug fixes. Require .html ext for file uploads.

--- a/templates/form.html
+++ b/templates/form.html
@@ -60,7 +60,7 @@
             <div class="form-group">
                 <input type="submit" id="go" value="Convert Equation" class="btn btn-primary pull-right"/>
             </div>
-            <p class="text-danger pull-right" id="errorMessage"></p>
+            <p class="text-danger pull-right errorMessage"></p>
         </form>
     </div>
     <div role="tabpanel" class="tab-pane" id="html5-tab">
@@ -89,6 +89,7 @@
             <div class="form-group">
                 <input type="submit" id="upload" value="Upload File" class="btn btn-primary pull-right"/>
             </div>
+            <p class="text-danger pull-right errorMessage"></p>
         </form>
     </div>
   </div>
