--- a/templates/html5s/html5_uploads.html
+++ b/templates/html5s/html5_uploads.html
@@ -1,5 +1,5 @@
 <h1 class="page-header">Html5 Uploads</h1>
-<% if (typeof html5Uploads != 'undefined') { %>
+<% if (typeof html5Uploads != 'undefined' && html5Uploads.length > 0) { %>
 <%
     var limit = 10;
     var pages = Math.ceil(html5Uploads.length/10);
