--- a/templates/equations/equations.html
+++ b/templates/equations/equations.html
@@ -1,4 +1,5 @@
-<% if (typeof equations != 'undefined') { 
+<h1>Equations</h1>
+<% if (typeof equations != 'undefined' && equations.length > 0) { 
     var limit = 10;
     var pages = Math.ceil(equations.length/10);
     var currentPage = 1;
@@ -16,7 +17,7 @@
       </ul>
     </nav>
 <% } %>
-    <h1>Equations</h1>
+    
     <table class="table table-striped table-bordered" id="resultsTable">
     <thead>
         <tr>
@@ -37,4 +38,7 @@
     <% }); %>
     </tbody>
     </table>
+<% } else { %>
+<p>No equations.</p> 
 <% } %>
+
