--- a/templates/html5s/html5.html
+++ b/templates/html5s/html5.html
@@ -7,6 +7,7 @@
 <p><strong>Filename:</strong> <%= html5.get("filename") %></p>
 <p><strong>Output Format:</strong> <%= html5.get("outputFormat") %></p>
 <p><strong>Status:</strong> <%= html5.get("status") %></p>
+<p><strong>ID:</strong> <a href="#/html5/<%= html5.get("id") %>"><%= html5.get("id") %></a></p>
 <p id="download"><strong>Download:</strong>
     <a href="/html5/<%= html5.get("id") %>/source"><span class="sr-only">Download</span> <%= html5.get("filename") %> source</a>
     <% if (typeof(html5.get("output")) != "undefined") { %> 
