MMLC-145 placeholder for equation textarea

--- a/templates/form.html
+++ b/templates/form.html
@@ -15,7 +15,7 @@
         <div class="form-group row">
             <label class="col-sm-3 control-label" for="mml-input"><span class="sr-only">Equation</span></label>
             <div class="col-sm-9">
-                <textarea id="mml-input" name="math" class="form-control singleEquation"></textarea>
+                <textarea id="mml-input" name="math" class="form-control singleEquation" placeholder="Enter Equation"></textarea>
             </div>
         </div>
         <div class="form-group row" id="outputOptions">
@@ -42,7 +42,7 @@
             </label>
             <div class="col-sm-9">
                 <label for="html5" class="sr-only">HTML5 File</label>
-                <input type="file" id="html5" name="html5" class="multipleEquations" disabled/>
+                <input type="file" id="html5" name="html5" class="multipleEquations" disabled accept="text/html"/>
             </div>
         </div>
         <fieldset>
