--- a/templates/html5s/html5_uploads.html
+++ b/templates/html5s/html5_uploads.html
@@ -19,15 +19,15 @@
     </nav>
 <% } %>
 <div id="html5Results">
-    <table class="table table-striped table-bordered" id="resultsTable">
+    <table class="table table-striped" id="resultsTable">
         <thead>
             <tr>
-                <th>Upload ID</th>
-                <th>File Name</th>
-                <th>Number of Equations</th>
-                <th>Output Format</th>
-                <th>Date</th>
-                <th>Download Options</th>
+                <th class="info">Upload ID</th>
+                <th class="info">File Name</th>
+                <th class="info">Number of Equations</th>
+                <th class="info">Output Format</th>
+                <th class="info">Date</th>
+                <th class="info">Download Options</th>
             </tr>
         </thead>
         <tbody>
