--- a/templates/equations/equations.html
+++ b/templates/equations/equations.html
@@ -18,22 +18,28 @@
     </nav>
 <% } %>
     
-    <table class="table table-striped table-bordered" id="resultsTable">
+    <table class="table table-striped" id="resultsTable">
     <thead>
         <tr>
-            <th>Equation ID</th>
-            <th>Input Math Type</th>
-            <th>Input Math</th>
-            <th>Output</th>
+            <th class="info">Input Math Type</th>
+            <th class="info">Input Math</th>
+            <th class="info">Output</th>
+            <th class="info">Send Feedback</th>
         </tr>
     </thead>
     <tbody>
     <% _.each(equations, function(equation) { %>
         <tr>
-            <td><a href="/equation/<%= equation.get("id") %>" data-toggle="modal" data-target="mmlcModal" data-model="<%= equation.get("id") %>" class="feedback">Submit Feedback</a></td>
             <td><%= equation.get("mathType") %></td>
             <td><%= equation.get("math") %></td>
-            <td><%= typeof(equation.get("components"))  != "undefined" && equation.get("components").length > 0 ? equation.get("components")[0].source : "" %></td>
+            <td>
+                <% if (typeof(equation.get("components"))  != "undefined" && equation.get("components").length > 0) { 
+                    _.each(equation.get("components"), function(component) { %>
+                        <%= component.source %>
+                <%   });
+                } %>
+            </td>
+            <td><a href="/equation/<%= equation.get("id") %>" data-toggle="modal" data-target="mmlcModal" data-model="<%= equation.get("id") %>" class="feedback">Submit Feedback</a></td>
         </tr>
     <% }); %>
     </tbody>
