--- a/templates/html5s/html5.html
+++ b/templates/html5s/html5.html
@@ -4,16 +4,15 @@
     <% } %>
     HTML5 Upload
 </h2>
-<p><strong>Filename:</strong> <%= html5.get("filename") %></p>
-<p><strong>Output Format:</strong> <%= html5.get("outputFormat") %></p>
-<p><strong>Status:</strong> <%= html5.get("status") %></p>
-<p><strong>ID:</strong> <a href="#/html5/<%= html5.get("id") %>"><%= html5.get("id") %></a></p>
-<p id="download"><strong>Download:</strong>
-    <a href="/html5/<%= html5.get("id") %>/source"><span class="sr-only">Download</span> <%= html5.get("filename") %> source</a>
-    <% if (typeof(html5.get("output")) != "undefined") { %> 
-        | <a href="/html5/<%= html5.get("id") %>/output"><span class="sr-only">Download</span> <%= html5.get("filename") %> output</a>
-    <% } %>
-</p>
+<ul class="list-inline">
+    <li><strong>Filename:</strong> <%= html5.get("filename") %></li>
+    <li><strong>Output Type:</strong> <%= html5.get("outputFormat") %></li>
+    <li>
+        <strong>Download:</strong>
+        <a href="/html5/<%= html5.get("id") %>/source"><span class="sr-only">Download</span> original file</a>
+        | <a href="/html5/<%= html5.get("id") %>/output"><span class="sr-only">Download</span> output file</a>
+    </li>
+</ul>
 <% if (typeof(html5.get("comments")) != "undefined") { %>
     <p class="error"><strong>Errors:</strong> <%= html5.get("comments") %></p>
 <% } %>
