AUth cleanup MMLC-147

--- a/templates/public_nav.html
+++ b/templates/public_nav.html
@@ -2,7 +2,7 @@
     <li class="public"><a href="#/about" class="pageLink">About MathML Cloud</a></li>   
     <li class="public"><a href="/user/signUp" id="registerLink">Register</a></li>   
 </ul>
-<form class="navbar-form navbar-right public login" action="/auth/process" method="post">
+<form class="navbar-form navbar-right public login" action="/login" method="post">
     <div class="form-group">
         <label for="username" class="sr-only">Username</label>
         <input type="text" name="username" id="username" placeholder="Email" class="form-control">
