--- a/templates/user_nav.html
+++ b/templates/user_nav.html
@@ -5,5 +5,5 @@
     <% if (user.get("role") == "admin") { %>
         <li class="user-tabs"><a href="admin">Admin</a></li>
     <% } %>
-    <li class="user-tabs"><a href="/auth/logout" id="logout">Log Out</a></li>
+    <li class="user-tabs"><a href="/logout" id="logout">Log Out</a></li>
 </ul>
