MMLC-160 Better indication of activity for ajax requests

--- a/templates/equations/equation.html
+++ b/templates/equations/equation.html
@@ -5,6 +5,7 @@
         <textarea id="equationMath" class="form-control"><%= equation.get("math") %></textarea>
     </div>
     <div class="form-group">
+        <img src="images/load.gif" style="display: none;" class="spinner" alt="Please wait while we process your equation(s)"/>
         <button type="submit" class="btn btn-primary" id="updateEquation">Update</button>
     </div>
 </form>
