--- a/templates/form.html
+++ b/templates/form.html
@@ -70,7 +70,8 @@
         </div>
         </fieldset>
         <div class="form-group">
-            <input type="submit" id="go" value="Convert" class="btn btn-primary pull-right"/>
+            <input type="submit" id="go" value="Process" class="btn btn-primary pull-right"/>
+            <img src="images/load.gif" style="display: none;" class="spinner pull-right" alt="Please wait while we process your equation(s)"/>
         </div>
         <p class="text-danger pull-right errorMessage"></p>
     </form>
