--- a/templates/html5s/html5.html
+++ b/templates/html5s/html5.html
@@ -7,6 +7,7 @@
 <ul class="list-inline">
     <li><strong>Filename:</strong> <%= html5.get("filename") %></li>
     <li><strong>Output Type:</strong> <%= html5.get("outputFormat") %></li>
+    <li><strong>Status:</strong> <%= html5.get("status") %></li>
     <li>
         <strong>Download:</strong>
         <a href="/html5/<%= html5.get("id") %>/source"><span class="sr-only">Download</span> original file</a>
