--- a/templates/users/sign_up.html
+++ b/templates/users/sign_up.html
@@ -78,6 +78,7 @@
     <div class="col-sm-8"></div>
     <div class="col-sm-4">
       <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
+      <p class="text-danger errorMessage"></p>
     </div>
   </div>
 </form>
