--- a/templates/equations/equations.html
+++ b/templates/equations/equations.html
@@ -23,10 +23,9 @@
         <tr>
             <th class="info">Equation ID</th>
             <th class="info">Input Math Type</th>
-            <th class="info">Input Math</th>
             <th class="info">Output</th>
             <th class="info">Text Description</th>
-            <th class="info">Send Feedback</th>
+            <th class="info">Submit Feedback</th>
         </tr>
     </thead>
     <tbody>
@@ -34,7 +33,6 @@
         <tr>
             <td><a href="#/equation/<%=equation.get("id")%>"><%=equation.get("id")%></td>
             <td><%= equation.get("mathType") %></td>
-            <td><%= equation.get("math") %></td>
             <td>
                 <% if (typeof(equation.get("components"))  != "undefined" && equation.get("components").length > 0) { 
                     var notDescription = equation.get("components").reject(function(component){ return component.get("format") == "description"; }); %>
