--- a/templates/html5s/html5.html
+++ b/templates/html5s/html5.html
@@ -23,8 +23,7 @@
 <% if (typeof(html5.get("output")) != "undefined") { 
     var preview = html5.get("output").split("<body")[1].split(">").slice(1).join(">").split("</body>")[0];
 %> 
-    <h2>Preview</h2>
-    <div id="preview">
+    <div id="preview" style="display: none;">
         <%= preview %>
     </div>
 <% } %>
